--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body {
     display: flex;
     flex-direction: column;
     box-sizing: border-box;
+    margin: 0;
 }
 
 /*HEADER STYLING*/
@@ -54,12 +55,26 @@ a {
 .section1 {
     display: flex;
     justify-content: center;
+    align-items: center;
+    gap: 10px;
+    padding: 100px;
+    background-color: #1F2937;
+    color: #E5E7EB;
 }
 
 .section1-content {
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: baseline;
+    width: 500px;
+}
 
+.section1 h1 {
+    font-size: 48px;
+    color: #F9FAF8;
+    font-weight: bolder;
+    margin-bottom: 0;
 }
 
 .sign-up {
@@ -70,4 +85,117 @@ a {
     height: 40px;
     border: none;
     outline: none;
+}
+
+button {
+    color: #E5E7EB;
+    font-weight: bold;
+    background-color: #3882F6;
+    outline: none;
+    
+}
+
+/*SECTION 2 STYLING*/
+.section2 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 35px;
+} 
+
+.section2 h1 {
+    font-size: 36px;
+    color: #1F2937;
+    font-weight: 900;
+    margin-bottom: 35px;
+}
+
+.section2-images {
+    display: flex;
+    gap: 20px;
+    flex-wrap: wrap;
+}
+
+.section2-image {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.section2-image img {
+    width: 300px;
+    height: 300px;
+    border-radius: 10px;
+}
+
+/*SECTION 3*/
+.section3 {
+    display: flex;
+    flex-direction: column;
+    background-color: #E5E7EB;
+    justify-content: center;
+    align-items: center;
+    padding: 100px;
+}
+
+.section3 .quote {
+    font-size: 36px;
+    font-style: italic;
+    color: #1F2937;
+}
+
+.section3 p {
+    font-weight: 500;
+    font-size: 24px;
+    color: #1F2937;
+    margin-left: auto;
+}
+
+/*SECTION 4 STYLING*/
+.section4 {
+    padding: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.actionCall {
+    background-color: #3882F6;
+    padding: 25px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 1000px;
+    border-radius: 8px;
+    color: #E5E7EB;
+}
+
+.section4 .text {
+    display: flex;
+    flex-direction: column;
+}
+
+.section4 h2 {
+    margin-bottom: 0;
+}
+
+.section4 p {
+    margin-top: 0px;
+}
+
+.section4 button {
+    padding: 8px 25px;
+    border: #E5E7EB 3px solid;
+    border-radius: 10px;
+    font-size: 18px;
+}
+
+/*FOOTER SYLING*/
+
+footer {
+    text-align: center;
+    padding: 30px;
+    background-color: #1F2937;
+    color: #E5E7EB;
+    font-size: 18px;
 }
