--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ a {
     justify-content: space-between;
     align-items: center;
     padding: 8px;
-    background-color: #1F2937;
+    background-color: brown;
 }
 
 .left-content, .right-content {
